# app/controllers/api_resources_controller.rb
@@ -14,14 +14,22 @@ class ApiResourcesController < ApplicationController
   end
 
   def index_comments
-    comments = Curriculum
-               .find(params[:curriculum_id])
-               .learning_units
-               .find(params[:learning_unit_id])
-               .resources
+    comments = Resource
                .find(params[:resource_id])
                .resource_comments
-    render json: comments, only: %i[id content]
+               .includes(:user)
+
+    resource_comments = []
+    comments.each do |comment|
+      json_hash = {
+        id: comment.id,
+        content: comment.content,
+        user_name: User.find(comment.user_id).name,
+        created_at: comment.created_at
+      }
+      resource_comments << json_hash
+    end
+    render json: resource_comments
   end
 
   def create
