# swagger/v1/swagger.json
@@ -25,6 +25,9 @@
                       },
                       "name": {
                         "type": "string"
+                      },
+                      "description": {
+                        "type": "string"
                       }
                     }
                   }
@@ -67,11 +70,47 @@
                     },
                     "name": {
                       "type": "string"
+                    },
+                    "description": {
+                      "type": "string"
                     }
                   }
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/api/curriculums/{curriculum_id}/learning_units/{learning_unit_id}/resources/{resource_id}/comments": {
+      "get": {
+        "summary": "Returns a list of all comments",
+        "tags": [
+          "Comments"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "properties": {
+                      "id": {
+                        "type": "integer"
+                      },
+                      "name": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -136,8 +175,7 @@
                     "type": "string"
                   },
                   "url": {
-                    "type": "string",
-                    "default": "https://example.com/"
+                    "type": "string"
                   },
                   "description": {
                     "type": "string"
